# nadir

./: ARCHITECTURE.md  Cargo.toml  README.md  eslint.config.js  package-lock.json  package.json
.github/workflows/: docs.yml  publish.yml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.js  config.mts
docs/guide/: getting-started.md  mcp.md  motivation.md
docs/reference/: decorations.md  interactive.md  layout.md  reset.md  spacing.md  typography.md
docs/src/: index.md
docs/src/guide/: core-concepts.md  getting-started.md  philosophy.md
docs/src/reference/: color.md  layout.md  overview.md  shapes.md  spacing.md  typography.md
example/: index.html  index.partial.html  nadir.config.json
example/src/: index.html
mcp/: package-lock.json  package.json
mcp/src/: data.js  index.js
misc/: ARCHITECTURE.md  CLASS_NAMES.md
nadir-core/: Cargo.toml
nadir-core/src/: breakpoints.rs  direction.rs  helpers.rs  main.rs  size.rs  spacing.rs  units.rs
src/: application.rs  build.js  config.js  config.rs  file_manager.rs  helpers.js  html_utils.rs  main.rs  page.rs  partial.rs
src/generators/: layout.js  opacity.js  roundness.js  spacing.js  typography.js
src/static/: border.css  interactive.css  reset.css  shadow.css
src/static/layout/: alignment.css  aspect.css  display.css  flex.css  object.css  overflow.css  position.css  sizing.css  stack.css  visibility.css
test/: generators.test.js
