[package]
name = "nadir"
description = "A static site builder focused on simplicity"
version = "0.1.2"
authors = ["Nikola Lazarov <nikola.n.lazarov@outlook.com>"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/nikelaz/nadir"
license = "MIT"
categories = ["command-line-utilities", "web-programming", "development-tools"]
exclude = [
  "example/*",
]

[dependencies]
walkdir = "2.5.0"
scraper = "0.23.1"
serde_json = "1.0.140"
minify-html-onepass = "0.16.4"
colored = "3.0.0"
path-slash = "0.2.1"
dunce = "1.0.5"

